# d26badge-freertos-fw

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_CHECKLIST.md  MICROPYTHON_ARCHITECTURE.md  MICROPYTHON_INTEGRATION_PLAN.md  MICROPYTHON_STATUS.md  Makefile  QUICKSTART_MICROPYTHON.md  README.md  partitions_ota_micropython.csv  sdkconfig  sdkconfig.backup  sdkconfig.defaults  sdkconfig.old  sdkconfig.quad  setup_idf.sh
FreeRTOS/components/micropython_runner/: mpconfigport.h
components/audio/: CMakeLists.txt  audio.c  audio_spectrum_screen.c
components/audio/include/: audio.h  audio_spectrum_screen.h
components/buttons/: CMakeLists.txt  buttons.c
components/buttons/include/: buttons.h
components/games/: CMakeLists.txt  archanoid.c  hacky_bird.c  monza.c  pong.c  race_condition.c  snake.c  space_shooter.c
components/games/include/: archanoid.h  hacky_bird.h  monza.h  pong.h  race_condition.h  snake.h  space_shooter.h
components/menu_ui/: CMakeLists.txt  menu_ui.c
components/menu_ui/include/: menu_icons.h  menu_ui.h  version.h
components/micropython_runner/: CMakeLists.txt  micropython_runner.c  modbadge.c  mp_bridge.c  mpconfigboard.h  mpconfigport.h  mphalport.c  mphalport.h  qstrdefsport.h
components/micropython_runner/genhdr/: moduledefs.h  mpversion.h  qstrdefs.generated.h  root_pointers.h
components/micropython_runner/include/: micropython_runner.h  mp_bridge.h
components/pyapps_fs/: CMakeLists.txt  pyapps_fs.c
components/pyapps_fs/include/: pyapps_fs.h
components/sk6812/: CMakeLists.txt  sk6812.c
components/sk6812/include/: sk6812.h
components/st7789/: CMakeLists.txt  font8x16.h  st7789.c
components/st7789/include/: st7789.h
components/ui/: CMakeLists.txt  about_screen.c  badge_settings.c  color_select_screen.c  event_schedule_screen.c  idle_screen.c  sao_eeprom_screen.c  sensor_readout_screen.c  signal_strength_screen.c  text_input_screen.c  ui_test_screen.c  wlan_list_screen.c  wlan_spectrum_screen.c
components/ui/include/: about_screen.h  badge_settings.h  color_select_screen.h  event_schedule_screen.h  idle_screen.h  sao_eeprom_screen.h  sensor_readout_screen.h  signal_strength_screen.h  text_input_screen.h  ui_test_screen.h  wlan_list_screen.h  wlan_spectrum_screen.h
main/: CMakeLists.txt  main.c
